css/style.css
/*------------------------------------------------------------------------
    Mes commentaires :                  
    ----------------------------------------------------------------------
    Padding : -> L’espace dans une boîte
    Margin : -> L’espace entre deux boîtes
    Par défaut, une image <img> est un élément inline, comme du texte : 
        -> display: block; dit au navigateur : “Cette image n’est pas du texte, c’est un bloc.”
            -> elle n’est plus alignée sur la baseline, donc l’espace en bas disparaît.
    le <body> a margin: 8px par défaut.
    gap : espace entre les elements
    block : met chaque élément l’un sous l’autre
    inline : ne marche pas bien pour les grands blocs
    grid : est plutôt pour des mises en page plus complexes
    flex : transforme le conteneur en ligne par défaut, super responsive
    justify-content: flex-start -> tout collé à gauche
    justify-content: flex-end -> tout collé à droite
    justify-content: center -> tout au centre
    justify-content: space-around -> espaces egal autour 
    justify-content: space-between -> espaces extrémités L R 
    align-items : center, flex-start, flex-end. 
    Différence entre justify et align :
        -> justify-content = aligne sur l’axe principal
            -> l’axe principal est horizontal  
            -> justify-content = aligne à gauche / centre horiz / droite etc.
        -> align-items = aligne sur l’axe secondaire
            -> l’axe principal est horizontal  
            -> justify-content = aligne en haut / centré verti / en bas
    @Media queries pour le mobile c'est pratique. 
    -----------------------------------------------------------------------
    Raccourcis : 
    -----------------------------------------------------------------------
    Word Wrap : option+Z
    Fermer page : cmd+w
    -----------------------------------------------------------------------
    Sémentiques que j'oublie : 
    -----------------------------------------------------------------------
    display devant flex etc. : display:flex;
    padding: 0 1 0 px : 
        Pour : 
            0 = padding en haut ET en bas
            1px = padding à gauche ET à droite
            padding: [vertical] [horizontal];
    
     -----------------------------------------------------------------------*/

/*-----------Fonts------------*/
        /* Polices */

@font-face {
  font-family: "Hanken Grotesk";
  src: url("../fonts/HankenGrotesk-VariableFont_wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: "Hanken Grotesk";
  src: url("../fonts/HankenGrotesk-Italic-VariableFont_wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: italic;
}
@font-face {
  font-family: "Roboto Serif";
  src: url("../fonts/roboto-serif-latin-400-normal.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Roboto Serif";
  src: url("../fonts/roboto-serif-latin-400-italic.ttf") format("truetype");
  font-weight: 400;
  font-style: italic;
}

@font-face {
  font-family: "Roboto Serif";
  src: url("../fonts/roboto-serif-latin-500-normal.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Roboto Serif";
  src: url("../fonts/roboto-serif-latin-500-italic.ttf") format("truetype");
  font-weight: 500;
  font-style: italic;
}


@font-face {
  font-family: "Roboto Serif";
  src: url("../fonts/roboto-serif-latin-700-normal.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Roboto Serif";
  src: url("../fonts/roboto-serif-latin-700-italic.ttf") format("truetype");
  font-weight: 700;
  font-style: italic;
}
/* -----------Zone de Test ------------- */

* {
  outline: 1px solid red;
}

/* -----------Header------------- */
           /* Acceuil */

body {
  margin: 0;
  background-color: #edebd7;
}

.header-logo img {
    height:48px;
    display: block;
}

header {
    display:flex;
    justify-content: space-between;
    align-items: center;
    background-color: #5b8e7d;
    padding: 8px 16px; 

}

.header-nav {
    display: flex;
    align-items: center;
    gap: 24px;
}

.header-nav a {
  color: #211f1b;
  font-family: "Roboto Serif";
  font-size: 16px;
  font-weight: 500;
  text-decoration: underline;
  line-height: 1.5;
}
/* --------------Main-------------- */
          /* Acceuil - Hero */


.hero {
    padding: 32px 40px 0; 
    text-align: center;
}

.hero-inner{
    max-width: 800px;
    margin: 0 auto 0;

}

.hero h1{
    font-family:"Hanken Grotesk";
    font-size: 48px;
    font-weight: 700;
    font-style: normal;
    line-height: 1;
    color:#bc4b51;
    margin: 0 auto 32px;
}

.hero h1 span{
    display:block;
}

.hero img {
    width: 100%;
    height: auto;
    display: block;
}

          /* Acceuil - Intro */

.intro {
    padding: 32px 40px 0px; 
    text-align: left;
}

.intro-inner{
    max-width: 800px;
    margin: 0px auto 0px;

}

.intro h2{
    font-family:"Hanken Grotesk";
    font-size: 36px;
    font-weight: 700;
    font-style: normal;
    line-height: 1;
    color:#211f1b;
    margin: 0px 16px 32px;
}


.intro p {
    font-family:"Roboto Serif";
    font-size: 16px;
    font-weight: 500;
    font-style: normal;
    line-height: 1.5;
    color:#211f1b;
    margin: 0px 16px 32px;
}

.intro img {
    width: 100%;
    height: auto;
    display: block;
}

.intro a {
    display:block;
    width:fit-content;
    margin: 32px auto 0px;
    padding: 4px 24px 4px;
    font-family:"Hanken Grotesk";
    font-size: 16px;
    font-weight: 700;
    font-style: normal;
    line-height: 1.5;
    color:#bc4b51;
    text-decoration: none;
    text-align: center;
    border:solid 3px #bc4b51;;
    border-radius: 10px;
   
}

/*------------Footer--------------*/
          /* Bas de page */

footer{
    font-family:"Roboto Serif";
    font-size: 12px;
    font-weight: 400;
    line-height: 1.5;
    font-style: normal;
    background-color: #5b8e7d;
    color: #211f1b;
    margin-top: 32px;

}

.footer-inner{
    max-width:800px;
    margin: 0px auto 0px;
    display : flex;
    justify-content: space-between;
    align-items:stretch;
}

.footer-links ul{
    list-style: none;
    margin:0;
    padding:0;
}

.footer-index{
    padding : 16px 40px 16px;

}

footer a {
 color:#211f1b;  
}

.footer-about{
    font-family:"Roboto Serif";
    font-size: 12px;
    font-weight: 700;
    line-height: 1.5;
    font-style: normal; 
}

footer h3{
    font-family:"Roboto Serif";
    font-size: 12px;
    font-weight: 700;
    line-height: 1.5;
    font-style: normal;
}

.footer-logo{
    display:flex;
    justify-content:center;
   align-items: center;
}

.footer-logo img{
    width :80px;
    height: auto;
    display: block;
}

.footer-credit{
    text-align: center;
    margin: 16px auto 0px;
    max-width:800px;
    display:flex;
    justify-content:center;

}

.footer-links,
.footer-about,
.footer-logo {
    flex: 1;
}

/*------------Version Mobile--------------*/

@media screen and (max-width: 412px) {
    .hero,
    .intro {
    padding-left: 0;
    padding-right: 0;}

    .hero-inner,
    .intro-inner {
    max-width: 100%;
    padding-left: 0;
    padding-right: 0;}

    .hero img,
    .intro img {
    width: 100%;
    height: auto;
    display: block;}  
}

